--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,7 +1,9 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
-    maven {url = 'https://maven.brott.dev/'}
+    maven {
+        url = 'https://maven.brott.dev/'
+    }
 }
 
 dependencies {
@@ -18,6 +20,8 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.3'
     runtimeOnly 'org.tensorflow:tensorflow-lite:2.12.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.5'
+    //implementation 'com.acmerobotics.dashboard:dashboard:0.4.5'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.13'
+    implementation "com.acmerobotics.roadrunner:ftc:0.1.7"
 }
 
