--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'com.acmerobotics.roadrunner:core:0.5.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+    implementation "com.acmerobotics.roadrunner:ftc:0.1.7"
 
 }
